--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
 			</figcaption>
 
 			<div class="buttons">
-				<button class="btn btn-cadastrar">
+				<button class="btn-cadastrar">
 					Cadastrar 
 					<span class="material-symbols-outlined">
 						arrow_circle_right
 					</span>	
 				</button>
-				<button class="btn btn-sobre">
+
+				<button class="btn-sobre">
 					Sobre
 					<span class="material-symbols-outlined">
 						notification_important
