--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
 			<a href="index.html">
 				<h1 class="logo">Husky Siberiano - Uma raça incrível</h1>
 			</a>
+
+			<div class="menu-nav-lg">
+				<nav>
+					<ul>
+						<li><a href="">Home</a></li>
+						<li><a href="">Produtos</a></li>
+						<li><a href="">Serviços</a></li>
+						<li><a href="">Blog</a></li>
+						<li><a href="">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+
 			<button class="btn-menu" id="butao-menu">
 				<span class="material-symbols-outlined">menu</span>
 			</button>
