--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<img src="img/campanhas_03.jpg" alt="">
 				<div class="texto">
 					<h4>
-						Aparência geral
+						Aparência geral do Husky
 					</h4>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta cum unde, culpa vel, aut dolores molestiae ullam earum iusto. Et laborum est, magnam quis provident repellat corrupti, tenetur nisi blanditiis.</p>
 				</div>
