--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 			<div>
 				<nav>
 					<ul>
-						<li><a href="">Home</a></li>
+						<li><a href="/index.html">Home</a></li>
 						<li><a href="">Produtos</a></li>
 						<li><a href="">Serviços</a></li>
 						<li><a href="">Blog</a></li>
-						<li><a href="">Contato</a></li>
+						<li><a href="/contato.html">Contato</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -49,11 +49,11 @@
 			<div class="menu-nav-lg">
 				<nav>
 					<ul>
-						<li><a href="">Home</a></li>
+						<li><a href="/index.html">Home</a></li>
 						<li><a href="">Produtos</a></li>
 						<li><a href="">Serviços</a></li>
 						<li><a href="">Blog</a></li>
-						<li><a href="">Contato</a></li>
+						<li><a href="/contato.html">Contato</a></li>
 					</ul>
 				</nav>
 			</div>
